tests/valid_inputs/sizeof_ptr.cpp
// architecture dependant, but usually should be 8

int main() {
	return sizeof(void*);
}
