tests/invalid_inputs/parsing/sizeof_function_type.cpp

void f() {
	sizeof( int (char, double) );
}
